k8s-apps/teleport/manifests/ingress-route-tcp-kubernetes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: teleport-kubernetes
  namespace: teleport
spec:
  entryPoints:                  
    - tp-kubernetes
  routes:                       
  - match: HostSNIRegexp(`teleport.{suffix:.*}`)                   
    services:                 
    - name: teleport-cluster            
      port: 3026
      terminationDelay: 90000
      proxyProtocol:
        version: 1           
  tls:                          
    passthrough: true
