k8s-apps/teleport/manifests/ingress-route-tcp-mysql.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: teleport-database
  namespace: teleport
spec:
  entryPoints:                  
    - tp-database
  routes:                       
  - match: HostSNIRegexp(`teleport.{suffix:.*}`)                   
    services:                 
    - name: teleport-cluster            
      port: 3036         
  tls:                          
    passthrough: true
