k8s-apps/teleport/manifests/ingress-route-tcp-ssh-proxy.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: teleport-ssh-proxy
  namespace: teleport
spec:
  entryPoints:                  
    - tp-ssh-proxy
  routes:                       
  - match: HostSNI(`*`)                       
    services:                 
    - name: teleport-cluster             
      port: 3023
