k8s-apps/teleport/manifests/ingress-route-tcp-ssh-tunnel.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: teleport-ssh-tunnel
  namespace: teleport
spec:
  entryPoints:                  
    - tp-ssh-tunnel
  routes:                       
  - match: HostSNI(`*`)                       
    services:                 
    - name: teleport-cluster            
      port: 3024
