k8s-apps/teleport/manifests/traefik-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: kube-system
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - match: HostRegexp(`traefik.{suffix:.*}`)
    kind: Rule
    services:   
    - kind: TraefikService 
      name: api@internal
  tls: {}
